[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fontpackage/Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://levels/Level01.gd" type="Script" id=2]
[ext_resource path="res://themes/blue_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Level01" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 920.0
margin_bottom = 440.0

[node name="Title" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 920.0
margin_bottom = 58.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Title"]
margin_right = 70.0
margin_bottom = 58.0

[node name="correct" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Title/VBoxContainer"]
margin_right = 70.0
margin_bottom = 19.0

[node name="pre" type="Label" parent="Panel/MarginContainer/VBoxContainer/Title/VBoxContainer/correct"]
margin_right = 57.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "Correct:"
align = 1

[node name="val" type="Label" parent="Panel/MarginContainer/VBoxContainer/Title/VBoxContainer/correct"]
margin_left = 61.0
margin_right = 70.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="wrong" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Title/VBoxContainer"]
margin_top = 23.0
margin_right = 70.0
margin_bottom = 42.0

[node name="pre" type="Label" parent="Panel/MarginContainer/VBoxContainer/Title/VBoxContainer/wrong"]
margin_right = 43.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "False:"
align = 1

[node name="val" type="Label" parent="Panel/MarginContainer/VBoxContainer/Title/VBoxContainer/wrong"]
margin_left = 47.0
margin_right = 56.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="MainTitle" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Title"]
margin_left = 74.0
margin_right = 920.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Title/MainTitle"]
margin_left = 288.0
margin_right = 558.0
margin_bottom = 35.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Conditionals"
align = 1
valign = 1

[node name="Question" type="Label" parent="Panel/MarginContainer/VBoxContainer/Title/MainTitle"]
margin_top = 39.0
margin_right = 846.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Items" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 920.0
margin_bottom = 389.0
size_flags_vertical = 3

[node name="Item" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Items"]
margin_left = 460.0
margin_top = 163.0
margin_right = 460.0
margin_bottom = 163.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Image" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Items/Item"]
size_flags_horizontal = 0

[node name="Buttons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 393.0
margin_right = 920.0
margin_bottom = 440.0
size_flags_vertical = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
margin_right = 109.0
margin_bottom = 47.0
size_flags_horizontal = 2

[node name="noBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons/HBoxContainer"]
margin_right = 109.0
margin_bottom = 47.0
text = "False"

[node name="yesBtn" type="Button" parent="Panel/MarginContainer/VBoxContainer/Buttons"]
margin_left = 828.0
margin_right = 920.0
margin_bottom = 47.0
size_flags_horizontal = 0
text = "True"
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Buttons/HBoxContainer/noBtn" to="." method="_on_noBtn_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Buttons/yesBtn" to="." method="_on_yesBtn_pressed"]
